[TEX] Derive forward Laplacian from Taylor mode

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -144,7 +144,10 @@ Ideas:
 \input{sections/laplacian_shallow_net.tex}
 
 \section{Inverting the Sum of Two Kronecker Matrices}
-\input{paper/sections/inverse_kronecker_sum}
+\input{sections/inverse_kronecker_sum}
+
+\section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}
+\input{sections/taylor_mode_forward_laplacian.tex}
 
 \end{document}
 
