--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -14,6 +14,7 @@
 % ===================================================================
 \usepackage{todonotes} % for TODOs, loads xcolor with []
 \newcommand{\toodoo}[1]{{\tt\color{red} #1}}
+\newcommand{\felix}[1]{{\color{blue}\textbf{Felix:} #1}}
 \usepackage{comment} % for comment environment
 
 % ===================================================================
