--- a/paper/references.bib
+++ b/paper/references.bib
@@ -97,16 +97,15 @@
 }
 
 @article{amari1998natural,
-  title={Natural gradient works efficiently in learning},
-  author={Amari, Shun-Ichi},
-  journal={Neural computation},
-  volume={10},
-  number={2},
-  pages={251--276},
-  year={1998},
-  publisher={MIT Press}
+  title =        {Natural gradient works efficiently in learning},
+  author =       {Amari, Shun-Ichi},
+  journal =      {Neural computation},
+  volume =       10,
+  number =       2,
+  pages =        {251--276},
+  year =         1998,
+  publisher =    {MIT Press}
 }
-
 
 @inproceedings{arora2018understanding,
   title =        {Understanding Deep Neural Networks with Rectified Linear
@@ -132,174 +131,225 @@
 }
 
 @inproceedings{muller2023achieving,
-  title={Achieving high accuracy with PINNs via energy natural gradient descent},
-  author={M{\"u}ller, Johannes and Zeinhofer, Marius},
-  booktitle={International Conference on Machine Learning},
-  pages={25471--25485},
-  year={2023},
-  organization={PMLR}
+  title =        {Achieving high accuracy with PINNs via energy natural gradient
+                  descent},
+  author =       {M{\"u}ller, Johannes and Zeinhofer, Marius},
+  booktitle =    {International Conference on Machine Learning},
+  pages =        {25471--25485},
+  year =         2023,
+  organization = {PMLR}
 }
 
 @article{dissanayake1994neural,
-  title={Neural-network-based approximations for solving partial differential equations},
-  author={Dissanayake, MWMG and Phan-Thien, Nhan},
-  journal={communications in Numerical Methods in Engineering},
-  volume={10},
-  number={3},
-  pages={195--201},
-  year={1994},
-  publisher={Wiley Online Library}
+  title =        {Neural-network-based approximations for solving partial
+                  differential equations},
+  author =       {Dissanayake, MWMG and Phan-Thien, Nhan},
+  journal =      {communications in Numerical Methods in Engineering},
+  volume =       10,
+  number =       3,
+  pages =        {195--201},
+  year =         1994,
+  publisher =    {Wiley Online Library}
 }
 
 @article{lagaris1998artificial,
-  title={Artificial neural networks for solving ordinary and partial differential equations},
-  author={Lagaris, Isaac E and Likas, Aristidis and Fotiadis, Dimitrios I},
-  journal={IEEE transactions on neural networks},
-  volume={9},
-  number={5},
-  pages={987--1000},
-  year={1998},
-  publisher={IEEE}
+  title =        {Artificial neural networks for solving ordinary and partial
+                  differential equations},
+  author =       {Lagaris, Isaac E and Likas, Aristidis and Fotiadis, Dimitrios
+                  I},
+  journal =      {IEEE transactions on neural networks},
+  volume =       9,
+  number =       5,
+  pages =        {987--1000},
+  year =         1998,
+  publisher =    {IEEE}
 }
 
-
 @article{raissi2019physics,
-  title={Physics-informed neural networks: A deep learning framework for solving forward and inverse problems involving nonlinear partial differential equations},
-  author={Raissi, Maziar and Perdikaris, Paris and Karniadakis, George E},
-  journal={Journal of Computational physics},
-  volume={378},
-  pages={686--707},
-  year={2019},
-  publisher={Elsevier}
+  title =        {Physics-informed neural networks: A deep learning framework
+                  for solving forward and inverse problems involving nonlinear
+                  partial differential equations},
+  author =       {Raissi, Maziar and Perdikaris, Paris and Karniadakis, George
+                  E},
+  journal =      {Journal of Computational physics},
+  volume =       378,
+  pages =        {686--707},
+  year =         2019,
+  publisher =    {Elsevier}
 }
 
 @article{sirignano2018dgm,
-  title={DGM: A deep learning algorithm for solving partial differential equations},
-  author={Sirignano, Justin and Spiliopoulos, Konstantinos},
-  journal={Journal of computational physics},
-  volume={375},
-  pages={1339--1364},
-  year={2018},
-  publisher={Elsevier}
+  title =        {DGM: A deep learning algorithm for solving partial
+                  differential equations},
+  author =       {Sirignano, Justin and Spiliopoulos, Konstantinos},
+  journal =      {Journal of computational physics},
+  volume =       375,
+  pages =        {1339--1364},
+  year =         2018,
+  publisher =    {Elsevier}
 }
 
 @article{zeng2022competitive,
-  title={Competitive physics informed networks},
-  author={Zeng, Qi and Kothari, Yash and Bryngelson, Spencer H and Sch{\"a}fer, Florian},
-  journal={arXiv preprint arXiv:2204.11144},
-  year={2022}
+  title =        {Competitive physics informed networks},
+  author =       {Zeng, Qi and Kothari, Yash and Bryngelson, Spencer H and
+                  Sch{\"a}fer, Florian},
+  journal =      {arXiv preprint arXiv:2204.11144},
+  year =         2022
 }
 
 @article{de2023operator,
-  title={An operator preconditioning perspective on training in physics-informed machine learning},
-  author={De Ryck, Tim and Bonnet, Florent and Mishra, Siddhartha and de B{\'e}zenac, Emmanuel},
-  journal={arXiv preprint arXiv:2310.05801},
-  year={2023}
+  title =        {An operator preconditioning perspective on training in
+                  physics-informed machine learning},
+  author =       {De Ryck, Tim and Bonnet, Florent and Mishra, Siddhartha and de
+                  B{\'e}zenac, Emmanuel},
+  journal =      {arXiv preprint arXiv:2310.05801},
+  year =         2023
 }
 
 @article{liu2024preconditioning,
-  title={Preconditioning for Physics-Informed Neural Networks},
-  author={Liu, Songming and Su, Chang and Yao, Jiachen and Hao, Zhongkai and Su, Hang and Wu, Youjia and Zhu, Jun},
-  journal={arXiv preprint arXiv:2402.00531},
-  year={2024}
+  title =        {Preconditioning for Physics-Informed Neural Networks},
+  author =       {Liu, Songming and Su, Chang and Yao, Jiachen and Hao, Zhongkai
+                  and Su, Hang and Wu, Youjia and Zhu, Jun},
+  journal =      {arXiv preprint arXiv:2402.00531},
+  year =         2024
 }
 
 @article{markidis2021old,
-  title={The old and the new: Can physics-informed deep-learning replace traditional linear solvers?},
-  author={Markidis, Stefano},
-  journal={Frontiers in big Data},
-  volume={4},
-  pages={669097},
-  year={2021},
-  publisher={Frontiers}
+  title =        {The old and the new: Can physics-informed deep-learning
+                  replace traditional linear solvers?},
+  author =       {Markidis, Stefano},
+  journal =      {Frontiers in big Data},
+  volume =       4,
+  pages =        669097,
+  year =         2021,
+  publisher =    {Frontiers}
 }
 
 @article{lu2021deepxde,
-  title={DeepXDE: A deep learning library for solving differential equations},
-  author={Lu, Lu and Meng, Xuhui and Mao, Zhiping and Karniadakis, George Em},
-  journal={SIAM Review},
-  volume={63},
-  number={1},
-  pages={208--228},
-  year={2021},
-  publisher={SIAM}
+  title =        {DeepXDE: A deep learning library for solving differential
+                  equations},
+  author =       {Lu, Lu and Meng, Xuhui and Mao, Zhiping and Karniadakis,
+                  George Em},
+  journal =      {SIAM Review},
+  volume =       63,
+  number =       1,
+  pages =        {208--228},
+  year =         2021,
+  publisher =    {SIAM}
 }
 
 @article{nabian2021efficient,
-  title={Efficient training of physics-informed neural networks via importance sampling},
-  author={Nabian, Mohammad Amin and Gladstone, Rini Jasmine and Meidani, Hadi},
-  journal={Computer-Aided Civil and Infrastructure Engineering},
-  volume={36},
-  number={8},
-  pages={962--977},
-  year={2021},
-  publisher={Wiley Online Library}
+  title =        {Efficient training of physics-informed neural networks via
+                  importance sampling},
+  author =       {Nabian, Mohammad Amin and Gladstone, Rini Jasmine and Meidani,
+                  Hadi},
+  journal =      {Computer-Aided Civil and Infrastructure Engineering},
+  volume =       36,
+  number =       8,
+  pages =        {962--977},
+  year =         2021,
+  publisher =    {Wiley Online Library}
 }
 
 @article{daw2022rethinking,
-  title={Rethinking the importance of sampling in physics-informed neural networks},
-  author={Daw, Arka and Bu, Jie and Wang, Sifan and Perdikaris, Paris and Karpatne, Anuj},
-  journal={arXiv preprint arXiv:2207.02338},
-  year={2022}
+  title =        {Rethinking the importance of sampling in physics-informed
+                  neural networks},
+  author =       {Daw, Arka and Bu, Jie and Wang, Sifan and Perdikaris, Paris
+                  and Karpatne, Anuj},
+  journal =      {arXiv preprint arXiv:2207.02338},
+  year =         2022
 }
 
 @article{zapf2022investigating,
-  title={Investigating molecular transport in the human brain from MRI with physics-informed neural networks},
-  author={Zapf, Bastian and Haubner, Johannes and Kuchta, Miroslav and Ringstad, Geir and Eide, Per Kristian and Mardal, Kent-Andre},
-  journal={Scientific Reports},
-  volume={12},
-  number={1},
-  pages={1--12},
-  year={2022},
-  publisher={Nature Publishing Group}
+  title =        {Investigating molecular transport in the human brain from MRI
+                  with physics-informed neural networks},
+  author =       {Zapf, Bastian and Haubner, Johannes and Kuchta, Miroslav and
+                  Ringstad, Geir and Eide, Per Kristian and Mardal, Kent-Andre},
+  journal =      {Scientific Reports},
+  volume =       12,
+  number =       1,
+  pages =        {1--12},
+  year =         2022,
+  publisher =    {Nature Publishing Group}
 }
 
 @article{wang2021understanding,
-  title={Understanding and mitigating gradient flow pathologies in physics-informed neural networks},
-  author={Wang, Sifan and Teng, Yujun and Perdikaris, Paris},
-  journal={SIAM Journal on Scientific Computing},
-  volume={43},
-  number={5},
-  pages={A3055--A3081},
-  year={2021},
-  publisher={SIAM}
+  title =        {Understanding and mitigating gradient flow pathologies in
+                  physics-informed neural networks},
+  author =       {Wang, Sifan and Teng, Yujun and Perdikaris, Paris},
+  journal =      {SIAM Journal on Scientific Computing},
+  volume =       43,
+  number =       5,
+  pages =        {A3055--A3081},
+  year =         2021,
+  publisher =    {SIAM}
 }
 
-
 @article{wang2022and,
-  title={When and why {PINNs} fail to train: A neural tangent kernel perspective},
-  author={Wang, Sifan and Yu, Xinling and Perdikaris, Paris},
-  journal={Journal of Computational Physics},
-  volume={449},
-  pages={110768},
-  year={2022},
-  publisher={Elsevier}
+  title =        {When and why {PINNs} fail to train: A neural tangent kernel
+                  perspective},
+  author =       {Wang, Sifan and Yu, Xinling and Perdikaris, Paris},
+  journal =      {Journal of Computational Physics},
+  volume =       449,
+  pages =        110768,
+  year =         2022,
+  publisher =    {Elsevier}
 }
 
 @article{wu2023comprehensive,
-  title={A comprehensive study of non-adaptive and residual-based adaptive sampling for physics-informed neural networks},
-  author={Wu, Chenxi and Zhu, Min and Tan, Qinyang and Kartha, Yadhu and Lu, Lu},
-  journal={Computer Methods in Applied Mechanics and Engineering},
-  volume={403},
-  pages={115671},
-  year={2023},
-  publisher={Elsevier}
+  title =        {A comprehensive study of non-adaptive and residual-based
+                  adaptive sampling for physics-informed neural networks},
+  author =       {Wu, Chenxi and Zhu, Min and Tan, Qinyang and Kartha, Yadhu and
+                  Lu, Lu},
+  journal =      {Computer Methods in Applied Mechanics and Engineering},
+  volume =       403,
+  pages =        115671,
+  year =         2023,
+  publisher =    {Elsevier}
 }
 
 @article{van2022optimally,
-  title={Optimally weighted loss functions for solving pdes with neural networks},
-  author={van der Meer, Remco and Oosterlee, Cornelis W and Borovykh, Anastasia},
-  journal={Journal of Computational and Applied Mathematics},
-  volume={405},
-  pages={113887},
-  year={2022},
-  publisher={Elsevier}
+  title =        {Optimally weighted loss functions for solving pdes with neural
+                  networks},
+  author =       {van der Meer, Remco and Oosterlee, Cornelis W and Borovykh,
+                  Anastasia},
+  journal =      {Journal of Computational and Applied Mathematics},
+  volume =       405,
+  pages =        113887,
+  year =         2022,
+  publisher =    {Elsevier}
 }
 
 @article{wang2022respecting,
-  title={Respecting causality is all you need for training physics-informed neural networks},
-  author={Wang, Sifan and Sankaran, Shyam and Perdikaris, Paris},
-  journal={arXiv preprint arXiv:2203.07404},
-  year={2022}
+  title =        {Respecting causality is all you need for training
+                  physics-informed neural networks},
+  author =       {Wang, Sifan and Sankaran, Shyam and Perdikaris, Paris},
+  journal =      {arXiv preprint arXiv:2203.07404},
+  year =         2022
 }
 
+@article{li2023forward,
+  title =        {Forward Laplacian: A New Computational Framework for Neural
+                  Network-based Variational Monte Carlo},
+  author =       {Li, Ruichen and Ye, Haotian and Jiang, Du and Wen, Xuelan and
+                  Wang, Chuwei and Li, Zhe and Li, Xiang and He, Di and Chen, Ji
+                  and Ren, Weiluo and others},
+  year =         2023,
+}
+
+@inproceedings{bettencourt2019taylor,
+  title =        {Taylor-mode automatic differentiation for higher-order
+                  derivatives in JAX},
+  author =       {Bettencourt, Jesse and Johnson, Matthew J and Duvenaud, David},
+  booktitle =    {Advances in Neural Information Processing Systems (NeurIPS);
+                  Workhop on Program Transformations for ML},
+  year =         2019
+}
+
+@book{griewank2008evaluating,
+  title =        {Evaluating derivatives: principles and techniques of
+                  algorithmic differentiation},
+  author =       {Griewank, Andreas and Walther, Andrea},
+  year =         2008,
+  publisher =    {SIAM}
+}
