Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -353,3 +353,21 @@
   year =         2008,
   publisher =    {SIAM}
 }
+
+@book{griewank2008evaluating,
+  title={Evaluating derivatives: principles and techniques of algorithmic differentiation},
+  author={Griewank, Andreas and Walther, Andrea},
+  year={2008},
+  publisher={SIAM}
+}
+
+@article{griewank1996algorithm,
+  title={Algorithm 755: ADOL-C: A package for the automatic differentiation of algorithms written in C/C++},
+  author={Griewank, Andreas and Juedes, David and Utke, Jean},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={22},
+  number={2},
+  pages={131--167},
+  year={1996},
+  publisher={ACM New York, NY, USA}
+}
