Update on Overleaf.

--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -1,5 +1,6 @@
 \subsection{Energy natural gradients (ENGs)}
 
+\textcolor{red}{should we only talk about supervised learning problems here?}
 %\begin{itemize}
 %    \item recently, energy NGs have been proposed
 %    \item one can show that they mimic Newtons method in function space
